--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>CSS Loaders - Milkshake Studio</title>
+        <meta name="description" content="Pure CSS page loaders. Made by Milkshake Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="style/main.css">
@@ -12,13 +12,19 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        
+    <div class='intro'>  
+        <div class='center'>
+            <h1>CSS Loaders</h1>
+            <h2>by <a href='http://milkshak.es' title='milkshake studio' target='_blank' >Milkshake Studio</a></h2>
+        </div>
+    </div>
+
 
         <div class='loading_one'>
-            <div class='circle one'>
+            <div class='circle one_a'>
                 <span></span>
             </div>
-            <div class='circle two'>
+            <div class='circle two_a'>
                 <span></span>
             </div>
         </div>
@@ -40,7 +46,50 @@
             <span></span>
         </div>
 
+         <div class='loading_four'>
+            <div class='holder'>
+                <span></span>
+                 <span></span>
+                <span></span>
+                <span></span>
 
+            </div>
+        </div>
+
+        <div class='loading_one dna'>
+            <div class='circle one'><span></span></div>
+            <div class='circle two'><span></span></div>
+
+            <div class='circle three'><span></span></div>
+            <div class='circle four'><span></span></div>
+
+
+            <div class='circle five'><span></span></div>
+            <div class='circle six'><span></span></div>
+
+            <div class='circle seven'><span></span></div>
+            <div class='circle eight'><span></span></div>
+        </div>
+
+       <!--  <div class='loading_five'>
+            <div class="holder">
+                <div class="cube">
+                    <div class="front">front</div>
+                    <div class="back">back</div>
+                    <div class="top">top</div>
+                    <div class="bottom">bottom</div>
+                    <div class="left">left</div>
+                    <div class="right"></div>
+                </div>
+            </div>
+        </div> -->
+
+
+         <div class='loading_five'>
+            <div class='holder'>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 343.1 73.4" enable-background="new 0 0 343.1 73.4" xml:space="preserve"> <g> <g> <path fill="#EE265D" d="M50.6,44.8c8.3-13.7,16.6-27.4,24.8-41.2c2.5-4.1,3.2-4.4,7.4-2c1.5,0.8,3,1.9,4.3,3.1 c2.8,2.6,3.9,5.6,2.5,9.6c-3.4,9.6-7.4,18.9-9.9,28.8c-1.5,6.1-3.3,12.2-0.6,18.5c0.7,1.8-0.7,2.2-2.1,2.2 c-4.3-0.1-12.1-5.8-13.4-9.9c-0.8-2.5,0.2-4.8,0.7-7.1c1.6-6.9,3.9-13.5,6.2-20.1c0.3-0.8,0.5-1.6,0.1-2.7c-1.8,2.5-3.6,5-5.3,7.6 c-5.7,8.7-11.2,17.5-16.1,26.6c-1.4,2.6-3.3,3.3-5.9,2.6c-2.1-0.6-4.2-1.4-6-2.7c-2.1-1.5-3.1-3.4-2.7-6.2 c1.2-9.4,3.4-18.6,3.4-28.2c0-1.6,0-3.1-0.3-4.7c-2.3,7.4-4.1,14.8-6.8,22.1c-2,5.3-4.1,10.5-7.6,15.1c-5.6,7.3-13.1,5.4-17.8,0.9 C2.8,54.4,1.1,50.9,0.2,47c-0.2-0.8-0.5-1.8,0.5-2.3c0.8-0.4,1.3,0.4,1.9,0.8c6.7,4.9,11,4.6,16.2-1.9 c7.6-9.6,11.7-20.7,13.5-32.7c0.5-3.2-0.6-3.8-3.6-2.6c-8.8,3.3-13.3,14-9.4,22.6c0.9,2,0.1,2.2-1.5,2.2C9.4,33,3,24.6,5.7,16.6 C8.8,7.3,16.2,2.9,25.2,0.8c4.5-1.1,9-1.1,13.4,0.3c7.3,2.3,12.3,9.1,12.7,17.5C51.8,27.3,51.6,36.1,50.6,44.8z"/> </g> <g> <path fill="#EE265D" d="M212.7,32.6c3.9-1.9,7.1-3.6,10.8-4.2c7.1-1.2,10.8,2.9,8.3,9.7c-1.2,3.2-2.7,6.3-4.1,9.5 c-1.2,2.6-2.1,5.3-2.3,8.1c-0.6,7.1,4.2,11.1,11.1,9.4c1-0.2,2.1-1.1,2.8,0c0.8,1.2-0.4,2.1-1.2,2.9c-4.5,4.8-13.4,6.8-19.5,4.4 c-6.8-2.7-9.5-8.6-7.6-16.5c1.3-5.3,3.9-9.9,6.3-14.6c0.8-1.5,2.5-3.4,0.9-4.7c-1.7-1.5-3.8,0-5.4,1.2c-2,1.4-3.4,3.4-4.5,5.6 c-2.5,4.9-4.6,9.9-5.4,15.3c-0.3,2.2-1.2,2.6-3.1,2.4c-0.4-0.1-0.8,0-1.3-0.1c-7.2-0.4-8.7-2.5-6.3-9.4c3.8-11.2,9-21.8,13.2-32.9 c1.2-3.2,2.6-6.4,3-9.9c0.2-1.6,1.1-2.3,2.8-2.4c5.9-0.2,9.9,5.1,7.9,10.6C217.1,22.1,215,27,212.7,32.6z"/> </g> <g> <path fill="#EE265D" d="M139.1,39.8c4.9-1.2,7.7-4.6,9.3-8.9c1-2.6,2.5-3.1,4.8-2.8c1.5,0.2,2.9,0.3,4.4,0.6 c3.5,0.8,4.2,2.6,2.2,5.6c-2.3,3.4-5.8,5.5-9.2,7.5c-2.8,1.6-5.7,2.9-9.3,3.7c3.3,3.8,7.1,5.1,11.6,4.7c1-0.1,2.2-0.9,2.8,0.4 c0.4,1-0.1,2-0.7,2.9c-2.1,3.4-5.1,5.9-8.9,7.1c-2.8,0.9-5.3,0.2-6.7-2.5c-1-1.9-1.8-4-2.8-6c-0.3-0.7-0.4-1.9-1.3-1.9 c-1.2-0.1-1.3,1.2-1.6,2c-0.8,2-1.5,4.1-1.7,6.4c-0.1,1.7-1,2.7-2.9,2.3c-0.4-0.1-0.8,0-1.3-0.1c-7.6-0.4-9.1-2.5-6.6-9.7 c3.7-10.8,8.8-21,12.8-31.7c1.3-3.5,2.9-7,3.3-10.8c0.2-1.9,1.4-2.5,3.1-2.3c3.1,0.5,5.7,2,7.6,4.5c1.4,1.8,0.8,3.5,0.2,5.3 c-2.3,6.8-5.5,13.4-8.3,20C139.5,37.4,138.6,38.3,139.1,39.8z"/> </g> <g> <path fill="#EE265D" d="M290.5,45.6c3.2,3.8,7.1,5.1,11.6,4.6c0.9-0.1,2-0.7,2.6,0.3c0.6,1,0.1,2-0.5,2.9 c-2.1,3.6-5.2,6.1-9.1,7.3c-2.8,0.9-5.3,0.1-6.7-2.7c-1.1-2.1-1.9-4.4-3-6.6c-0.2-0.5-0.3-1.4-1.1-1.3c-0.7,0.1-0.9,0.7-1.2,1.3 c-0.9,2.1-1.7,4.3-2,6.6c-0.2,2.1-1,3.4-3.4,2.9c-0.4-0.1-0.8,0-1.3-0.1c-7.1-0.4-8.8-2.7-6.3-9.2c4.2-11,8.9-21.9,13.3-32.9 c1.3-3.2,2.7-6.4,3-9.9c0.2-2.3,1.7-2.7,3.6-2.5c6.2,0.8,9.2,5.4,6.9,11.1c-2.5,6.3-5.3,12.5-7.9,18.8c-0.4,1-1.1,1.8-0.9,3.4 c4.9-1.1,7.4-4.6,9.4-8.7c0.7-1.4,0.9-3.2,3-3c3.1,0.2,6.6-0.2,9,2.1c1.4,1.3,0.2,3.2-0.9,4.5C304,40.3,297.8,43.4,290.5,45.6z"/> </g> <g> <path fill="#EE265D" d="M270.3,37.1c1.2-2,0.9-3.5-0.8-4.9c-3.5-2.9-7.6-3.8-12.1-4.1c-1.4,0.2-2.8,0.4-4.3,0.5 c-11.1,1.5-21.1,11.9-22.2,23c-0.6,6.3,2.5,9.5,8.7,9.4c4-0.1,7.5-1.6,10.8-3.8c1.4-0.9,2.3-1.2,3.6,0.2c2.3,2.4,5.3,3.6,8.8,3.6 c1.8,0,2.3-0.7,1.8-2.3c-0.8-2.4-0.4-4.7-0.1-7.2C265.4,46.3,267.5,41.6,270.3,37.1z M257.5,37.5c-2.3,5.1-4.9,10-9.2,13.7 c-1,0.9-2.2,1.4-3.5,0.8c-0.9-0.4-1-1.3-0.8-2.2c1.5-6.4,4.7-11.6,10.5-14.9c0.9-0.5,2.1-1.1,2.9-0.4 C258.5,35.3,257.9,36.5,257.5,37.5z"/> </g> <g> <path fill="#EE265D" d="M336.7,28.6c-11.4-2.5-26,7.9-27.9,19.5c-1.2,7.2,2.6,12.8,10.9,13.2c1.6,0.1,3.2-0.1,4.7-0.4 c5.9-0.9,11-3.4,14.3-8.7c0.6-1,1.3-2.2,0.2-3.1c-1-0.8-2,0-2.8,0.7c-1.6,1.3-3.3,2.3-5.3,2.7c-2.7,0.5-5.7,1.1-7.4-2.5 c6.6-1.8,12.7-3.9,17.3-9C345.1,35.8,343.2,30,336.7,28.6z M334.1,36.7c-0.5,2.4-6.6,7.2-9,7.2c-1,0.1-1.4-0.5-1-1.3 c1.6-3.5,3.8-6.6,7.5-8C333.6,33.8,334.5,34.7,334.1,36.7z"/> </g> <g> <path fill="#EE265D" d="M173,60.9c-4.4,0.1-8.6-0.8-12.1-3.6c-2.9-2.3-3-4.5-0.3-7c1.1-1,2.3-1.9,3.6-2.5c2.3-1.1,4.5-1.6,5.1,2 c0,0.2,0.1,0.4,0.2,0.6c0.8,1.7,1.9,3.1,4,3.1c0.8,0,1.5-0.1,1.7-1c0.4-2-0.6-3.5-2.1-4.6c-1.7-1.3-3.7-2.5-5.4-3.8 c-4.4-3.3-4.6-7.7-0.6-11.5c4.9-4.6,16.1-5.9,22-2.5c2.1,1.2,4.1,2.8,3.4,5.7c-0.5,2-5.2,5.5-7,5.4c-1.3-0.1-1.4-1-1.7-1.9 c-0.7-1.9-1.3-3.9-3.8-4c-0.8,0-1.6,0.4-1.8,1.5c-0.3,2.4,1.4,3.6,3,4.7c1.1,0.8,2.2,1.6,3.3,2.4c5.6,4.2,5.3,11.1-0.8,14.7 C180.5,60.4,176.8,61,173,60.9z"/> </g> <g> <path fill="#EE265D" d="M109.8,60.9c-0.7,0-1.1,0-1.5,0c-6.7-0.6-8.4-2.8-6-9c4.2-11,8.8-21.9,13.2-32.8c1.3-3.3,2.8-6.6,3.1-10.2 c0.2-2,1.4-2.6,3.3-2.5c6.2,0.5,9.5,5.5,7.2,11.2c-4.5,11.2-9.3,22.4-13.9,33.6c-0.9,2.2-1.8,4.5-2,6.9 C113,60.6,112,61.6,109.8,60.9z"/> </g> <g> <path fill="#EE265D" d="M91.2,61c-10-0.8-10.2-3.6-7.5-10.2c2-4.8,4.1-9.6,6.1-14.4c0.6-1.4,1-3,1.4-4.5c0.9-4,1.3-4.2,5.2-3.3 c5.2,1.2,7.5,5.2,5.5,10.1c-1.5,3.9-3.4,7.6-5.1,11.4c-1.1,2.6-2.3,5.2-2.4,8.1C94.1,60.5,93.2,61.7,91.2,61z"/> </g> <g> <path fill="#EE265D" d="M110.3,16c-0.1,4.5-4,8.8-7.9,8.7c-3.4-0.1-5.8-2.6-5.7-5.8c0.2-5,3.7-8.7,8.1-8.7 C108.4,10.2,110.4,12.3,110.3,16z"/> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </svg>
+            </div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
